Fix a 64-bit issue in BlurEffect::updateBlurRegion().

BUG: 235620
FIXED-IN: 4.5 beta2

svn path=/trunk/KDE/kdebase/workspace/; revision=1130567